# hackathon_agent

./: .gitignore  pyproject.toml
gilbert/agent/: agent.py
gilbert/agent/base/: just_chat_gpt.py  prompts.py
gilbert/agent/multi_agent/: prompts.py  the_bois.py
gilbert/agent/multi_agent_full_docs/: prompts.py  the_bois.py
gilbert/agent/multi_agent_graphrag/: the_bois.py
gilbert/app/: chainlit_app.py  test_agent.py
gilbert/docs/information_model/: adding-a-new-data-source.md  aliases.md  application-tags.md  engagement.md  index.md  information-model-guild.md  location.md  source-field-mapping.md  sources_index.md  system.md  tokenization-what-can-be-searched.md  twitter.md
gilbert/docs/search/: analytics_index.md  api-post-search-sample.md  api-post-search-validate.md  api-post-search.md  boolean-queries.md  clustering.md  deduping.md  extensible-queries.md  index.md  not-supported-features.md  overlays.md  queries_index.md  request-rules-and-limits.md  results_index.md  script-dsl.md  v2-audience-aggregate-view-request.md  v2-boolean-query-type.md  v2-consumer-attributes.md  v2-custom-category-query-type.md  v2-deduplicating-options.md  v2-planned-features.md  v2-request-modifiers.md  v2-saved-search-query-type.md  v2-search-migrating-from-v1.md  v2-tracing.md
gilbert/services/: rest_api.py  structurable.py
gilbert/services/documentation_rag/: settings.yaml
gilbert/services/ir/: __init__.py  client.py  ir_converter.py  ir_queries.py  ir_request.py  ir_view_requests.py
gilbert/tools/: search.py
gilbert/utils/: rate_limiter.py
(+450 files in other folders)
